--- a/src/components/JournalAddButton/JournalAddButton.css
+++ b/src/components/JournalAddButton/JournalAddButton.css
@@ -5,11 +5,14 @@
   justify-content: center;
   font-size: 16px;
   gap: 8px;
+  border-radius: 10px;
 }
+
 @media (any-hover: hover) {
   .journal-add-button svg {
     transition: transform 0.25s;
   }
+
   .journal-add-button:hover svg {
     transform: rotate(90deg);
   }
