--- a/src/components/JournalItem/JournalItem.css
+++ b/src/components/JournalItem/JournalItem.css
@@ -16,6 +16,7 @@
   display: flex;
   gap: 10px;
 }
+
 .journal-item__date {
   color: rgba(255, 255, 255, 0.4);
   font-size: 16px;
@@ -31,4 +32,7 @@
   font-weight: 400;
   line-height: normal;
   overflow: hidden;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
