--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -2,6 +2,7 @@
   border-radius: 10px;
   padding: 8px 30px;
   font-family: inherit;
+  font-weight: 600;
   cursor: pointer;
   transition: background 0.25s;
   font-size: 16px;
