--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,21 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+html, body {
+  margin: 0;
+  min-width: 320px;
+  height: 100vh;
+  overflow: hidden;
+  position: relative
+}
+
+#root {
+  height: 100vh;
+  overflow: hidden;
+  position: relative
+}
+
+
 /* Обнуляющие стили и базовая настройка*/
 * {
   padding: 0;
@@ -37,4 +52,5 @@ textarea {
 }
 
 body {
+  /*overflow: hidden;*/
 }
