--- a/src/components/JournalAddButton/JournalAddButton.css
+++ b/src/components/JournalAddButton/JournalAddButton.css
@@ -6,6 +6,7 @@
   font-size: 16px;
   gap: 8px;
   border-radius: 10px;
+  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
 }
 
 @media (any-hover: hover) {
@@ -13,7 +14,64 @@
     transition: transform 0.25s;
   }
 
-  .journal-add-button:hover svg {
+  .journal-add-button:hover span svg {
     transform: rotate(90deg);
   }
+}
+
+
+/* CSS */
+.journal-add-button {
+  align-items: center;
+  background-image: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);
+  border: 0;
+
+  box-shadow: rgba(151, 65, 252, 0.2) 0 15px 30px -5px;
+  box-sizing: border-box;
+  color: #FFFFFF;
+  display: flex;
+
+  justify-content: center;
+  line-height: 1em;
+  max-width: 100%;
+  min-width: 140px;
+  padding: 3px;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  cursor: pointer;
+
+
+  font-size: 16px;
+  gap: 8px;
+  border-radius: 10px;
+}
+
+.journal-add-button:active,
+.journal-add-button:hover {
+  outline: 0;
+  background: linear-gradient(144deg, #AF40FF, #5B42F3 50%, #00DDEB);;
+}
+
+.journal-add-button span {
+  background-color: rgb(5, 6, 45);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
+  padding: 10px;
+  border-radius: 8px;
+  width: 100%;
+  height: 100%;
+  transition: 300ms;
+}
+
+.journal-add-button:hover span {
+  background: none;
+}
+
+.journal-add-button:hover svg {
+  transform: rotate(90deg);
 }
